TEST_PROGRAMS/VALID_TYPECHECK/comparable_eq.go
package main;

func main() {
    var x bool = true;
    
    //this comparison is allowed
    var c bool = (1>0) == true;
    print(c);
}
