TEST_PROGRAMS/INVALID/04/102.go
package main

func main() {
    var x = 2

    // Illegal expression in statement context (by semi insertion)
    switch x > 2
    { }


}
